--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-custom sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-custom">
         <a class="navbar-brand" href="#">
             <img src="Images/icon.png" width="30px" height="30px" class="d-inline-block align-top">
             Getcars.com
@@ -126,11 +127,8 @@
         </div>
     </div>
     <!--Dark Section Content-->
-    <div class="home-content">
+    <div class="darker-content">
         <div class="row">
-            <!--<div class="col-sm-12 col-md-2">-->
-                <!--<img class="img-fluid" src="Images/sticker1.png">-->
-            <!--</div>-->
             <div class="col-sm-12 col-md-6 offset-md-2">
                 <div class="row">
                     <div class="col-sm-12 sticker-content-1">
@@ -172,36 +170,7 @@
         <div class="col"></div>
         <!--Get cool stuff btn-->
         <div class="get-stuff-wrapper">
-            <button type="button" class="btn btn-outline-primary get-stuff-btn " data-toggle="modal" data-target="#getCoolStuff">Get Cool Stuff!</button>
-        </div>
-    </div>
-    <!--Bottom Content-->
-    <div class="bottom-content">
-        <div class="card-deck">
-            <div class="card">
-                <img src="Images/poster1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Aston Martin DBS Superleggera breaks cover</h5>
-                    <p class="card-text">Aston Martin’s ‘Second Century’ plan is unravelling itself and if it is going to give us more along the likes of the DBS Superleggera, the Italians will certainly have a run for their money. </p>
-                    <p class="card-text"><a href="https://www.carwale.com/news/aston-martin-dbs-superleggera-breaks-cover/"><small class="text-muted">Read more</small></a></p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="Images/poster2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Jaguar Land Rover plans to invest Rs 1.2 billion dollars</h5>
-                    <p class="card-text">Jaguar Land Rover (JLR) plans to invest around Rs 1.2 billion dollars over the next three years for global operations. </p>
-                    <p class="card-text"><a href="https://www.carwale.com/news/jaguar-land-rover-plans-to-invest-rs-12-crore-over-next-three-years/"><small class="text-muted">Read more</small></a></p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="Images/poster3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Mercedes-AMG S63 Coupe revealed</h5>
-                    <p class="card-text">Mercedes-Benz continues their AMG onslaught in India with the introduction of second AMG-prepped performance vehicle in India. </p>
-                    <p class="card-text"><a href="https://www.carwale.com/news/mercedesamg-s63-coupe-explained-in-details/"><small class="text-muted">Read more</small></a></p>
-                </div>
-            </div>
+            <button type="button" class="btn btn-outline-dark get-stuff-btn " data-toggle="modal" data-target="#getCoolStuff">Get Cool Stuff!</button>
         </div>
     </div>
     <!-- Modal -->
@@ -247,7 +216,118 @@
             </div>
         </div>
     </div>
+    <!--Bottom Content-->
+    <div class="bottom-content-1">
+        <div class="card-deck">
+            <div class="card">
+                <img src="Images/poster1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Aston Martin DBS Superleggera breaks cover</h5>
+                    <p class="card-text">Aston Martin’s ‘Second Century’ plan is unravelling itself and if it is going to give us more along the likes of the DBS Superleggera, the Italians will certainly have a run for their money. </p>
+                    <p class="card-text"><a href="https://www.carwale.com/news/aston-martin-dbs-superleggera-breaks-cover/"><small class="text-muted">Read more</small></a></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="Images/poster2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jaguar Land Rover plans to invest Rs 1.2 billion dollars</h5>
+                    <p class="card-text">Jaguar Land Rover (JLR) plans to invest around Rs 1.2 billion dollars over the next three years for global operations. </p>
+                    <p class="card-text"><a href="https://www.carwale.com/news/jaguar-land-rover-plans-to-invest-rs-12-crore-over-next-three-years/"><small class="text-muted">Read more</small></a></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="Images/poster3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Mercedes-AMG S63 Coupe revealed</h5>
+                    <p class="card-text">Mercedes-Benz continues their AMG onslaught in India with the introduction of second AMG-prepped performance vehicle in India. </p>
+                    <p class="card-text"><a href="https://www.carwale.com/news/mercedesamg-s63-coupe-explained-in-details/"><small class="text-muted">Read more</small></a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--New Releases-->
+    <div class="jumbotron jumbotron-fluid new-rel-jumbotron">
+        <div class="container">
+            <h1 class="display-4">BMW M8 Gran Coupe</h1>
+            <p class="lead">THE M8 GRAN COUPE CONCEPT High class. High performance. High expectations. Behold an unprecedented symbiosis between sophistication and athleticism. Drawing inspiration from the sophisticated 8 Series and the athleticism of the M8 GTE gran tourer, the BMW M8 Gran Coupe Concept unites the disparate worlds of modern luxury and classic motor racing.</p>
+        </div>
+    </div>
+    <div class="new-release">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="">
+                            <img src="Images/m8.jpg" class="d-block w-100 new-rel-img">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 new-rel-txt">
+                        <div class="row">
+                            <p>Intensely impressive. A glance at its profile leaves no doubt: the BMW M8 Gran Coupe Concept is a performance machine. The long hood, flowing roofline, and shortened rear create an appearance of high-performance aggression and luxurious aspiration that’s simultaneously unique and unmistakable.</p>
+                        </div>
+                        <div class="row">
+                            <p>Tuned by the masters of M. From the M twin tailpipes to the M double-bar kidney grille, the BMW M8 Gran Coupe Concept shows off its performance potential. The iconic M design elements, including M gills and M brake calipers, are finished in beautiful matte gold to showcase the unique character of the vehicle.</p>
+                        </div>
+                        <div class="row">
+                            <button type="button" class="btn btn-outline-dark bmw-btn">Visit Site</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
 </div>
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-12">
+                <img src="Images/icon-xs.png" class="img-fluid footer-logo">
+            </div>
+            <div class="row logo-txt">
+                <div class="col-md-12 col-sm-12">
+                    <p>Getcars.com</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-12 col">
+                <ul>
+                    <li>Deals</li>
+                    <li>Top Notches</li>
+                    <li>Buy</li>
+                    <li>Sell</li>
+                    <li>Contact Us</li>
+                    <li>Sign In</li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row footer-dark">
+            <div class="col-sm-12 col-md-12">
+                <div class="footer-end-left">
+                    <i class="fa fa-facebook-square fa-3x icon-pad"></i>
+                    <i class="fa fa-google-plus-square fa-3x icon-pad"></i>
+                    <i class="fa fa-instagram fa-3x icon-pad"></i>
+                </div>
+                <div class="footer-end-right">
+                    <i class="fa fa-registered"></i>
+                    <i class="fa fa-copyright"></i>
+                    <a href="#" class="gp-copyright">Gautham webdevs</a>
+                    @nbsp
+                    <a href="#" class="footer-terms">Terms</a>
+                    <i class="fa fa-plus"></i>
+                    <a href="#" class="footer-terms">Privacy</a>
+                    @nbsp
+                    <i class="fa fa-home fa-3x icon-pad home-icon"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
