--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico|Satisfy|Shadows+Into+Light|Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 <div>
@@ -307,12 +308,15 @@
         <br>
         <br>
         <div class="row footer-dark">
-            <div class="col-sm-12 col-md-12">
+            <div class="col-sm-12 col-md-6">
                 <div class="footer-end-left">
                     <i class="fa fa-facebook-square fa-3x icon-pad"></i>
                     <i class="fa fa-google-plus-square fa-3x icon-pad"></i>
                     <i class="fa fa-instagram fa-3x icon-pad"></i>
+                    <i class="fa fa-home fa-3x icon-pad home-icon"></i>
                 </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
                 <div class="footer-end-right">
                     <i class="fa fa-registered"></i>
                     <i class="fa fa-copyright"></i>
@@ -321,8 +325,6 @@
                     <a href="#" class="footer-terms">Terms</a>
                     <i class="fa fa-plus"></i>
                     <a href="#" class="footer-terms">Privacy</a>
-                    @nbsp
-                    <i class="fa fa-home fa-3x icon-pad home-icon"></i>
                 </div>
             </div>
         </div>
